# list-shuffle

./: .gitignore  CHANGELOG.md  README.md  list-shuffle.cabal
.github/workflows/: haskell-ci.yml
bench/: Main.hs
src/List/: Shuffle.hs
test/: Main.hs
