cabal-version: 2.4
name: list-shuffle
version: 0

library
  build-depends:
    base,
    primitive,
    random,
  default-extensions:
    BlockArguments
    LambdaCase
    PatternSynonyms
  default-language: GHC2021
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: List.Shuffle

benchmark bench
  build-depends:
    base,
    deepseq,
    list-shuffle,
    random,
    tasty-bench,
  default-language: GHC2021
  ghc-options: -O "-with-rtsopts=-A32m -T"
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
